--- a/securesubmit/config.cfg
+++ b/securesubmit/config.cfg
@@ -4,7 +4,7 @@ TimeZone = America/New_York
 
 useEncryption = false
 
-URL= https://posgateway.cert.secureexchange.net/Hps.Exchange.PosGateway/PosGatewayService.asmx?wsdl
+URL= https://cert.api2.heartlandportico.com/Hps.Exchange.PosGateway/PosGatewayService.asmx?wsdl
 siteId = 20856
 deviceId = 1519321
 developerId = 123456
